added admin product control table

--- a/server/index.html
+++ b/server/index.html
@@ -18,6 +18,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+	<link rel="stylesheet" href="https://npmcdn.com/react-bootstrap-table/dist/react-bootstrap-table-all.min.css">
 
 	<meta name="twitter:image" content="http://res.cloudinary.com/jeroanhp/image/upload/v1477386633/jeroanhp-new_u04tdi.png">
 
